sock-shop/base/front-end-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-end-ingress
  labels:
    name: front-end
spec:
  ingressClassName: kong
  rules:
    - host: sockshop.apps.argoproj.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: front-end
                port:
                  number: 80
